--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -241,7 +241,18 @@ margin: 0 0 0 -25%
   75%  {background-color:green; left:0px; top:0px;}
   100% {background-color:red; left:0px; top:-300px;}
 }
+div.gallery {
+  border: 1px solid #ccc;
+}
 
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
  
 
 </style>
@@ -249,6 +260,16 @@ margin: 0 0 0 -25%
 </head>
 <body width="100%" height="100%" style="background-color: #000033;"> 
 
+<img src="/resources/image/Picture.png" />
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="img_forest.jpg">
+      <img src="/images/gamandraw.png" alt="Forest" width="600" height="400">
+    </a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
   
 		  
 
